fix: 🐛 fix game share z-index problem

--- a/src/components/views/Game/Game.scss
+++ b/src/components/views/Game/Game.scss
@@ -28,7 +28,6 @@
             justify-content: flex-end;
             width: 100%;
             transform: translateY(20%);
-            z-index: 3;
 
             .demo{
                 margin-right: 3%;
